cc_binary(
	name = "demo",
	srcs = ["main.cpp"],
	deps = [
		"//jukebox",
	],
	data = [
		"//jukebox_test/data:sound",
	],
	defines = select({
		# goes back 6: jukebox_test/demo + 4 more paths
		"@bazel_tools//src/conditions:windows": ["SOUND_PATH=../../../../../../jukebox_test/data/"],
		"//conditions:default": [],
	}),
)

cc_binary(
	name = "soundfont",
	srcs = ["soundfontDemo.cpp"],
	deps = [
		"//jukebox",
		"//jukebox/FileFormats:midi", # for MIDI configurator
	],
	data = [
		"//jukebox_test/data:sound",
		"//soundfont",
	],
	defines = select({
		# goes back 6: jukebox_test/demo + 4 more paths
		"@bazel_tools//src/conditions:windows": [
			"SOUND_PATH=../../../../../../jukebox_test/data/",
			"SOUNDFONT_PATH=../../../../../../soundfont/",
		],
		"//conditions:default": [],
	}),
)
